--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,35 +1,31 @@
-name: Deploy to GitHub Pages
+name: Build and Deploy Docker Image
 
 on:
   push:
     branches:
-      - main  # Change this if your default branch is different
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
+      - main
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
-    environment:
-      name: github-pages  # ✅ Required for GitHub Pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
     steps:
-      - name: Checkout the code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup GitHub Pages
-        uses: actions/configure-pages@v5
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Upload site files
-        uses: actions/upload-pages-artifact@v3
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
         with:
-          path: '.'  # Upload everything in root (index.html, salman.jpg, etc.)
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+
